actualizacion de titulo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./css/index.css" />
 
-  <title>Base 2 By Web 4B</title>
+  <title>Portafolio Juan Marquina</title>
   <meta name="title" content="Base 2 By Web 4B" />
   <meta name="description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
@@ -57,7 +57,7 @@
     <article class="i-hero" id="iHero">
       <div class="i-hero__container">
         <div class="i-hero__info-container">
-          <h1 class="i-hero__info-title">Base 2 by Web 4B</h1>
+          <h1 class="i-hero__info-title">Portafolio Juan Marquina</h1>
           <h2 class="i-hero__info-subtitle">Los mejores diseños y desarrollos de páginas web en el Perú</h2>
           <p class="i-hero__info-paragraph">
             Somos el mejor lugar donde puedes aprender sobre desarrollo web frontend. Asimismo, con Base 2 by Web 4B
