--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel="stylesheet" href="./css/index.css" />
 
   <title>Portafolio Juan Marquina</title>
-  <meta name="title" content="Base 2 By Web 4B" />
+  <meta name="title" content="Portafolio Juan Marquina" />
   <meta name="description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
 
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://elliotxleo.github.io/tecsup-frontend-o-g17/" />
-  <meta property="og:title" content="Base 2 By Web 4B" />
+  <meta property="og:title" content="Portafolio Juan Marquina" />
   <meta property="og:description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
   <meta property="og:image"
@@ -23,7 +23,7 @@
 
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://elliotxleo.github.io/tecsup-frontend-o-g17/" />
-  <meta property="twitter:title" content="Base 2 By Web 4B" />
+  <meta property="twitter:title" content="Portafolio Juan Marquina" />
   <meta property="twitter:description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
   <meta property="twitter:image"
@@ -46,7 +46,7 @@
             <a href="#iContact" class="header-nav__menu-link">Contacto</a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer"
+            <a href="#" target="_blank" rel="noopener noreferrer"
               class="header-nav__menu-link header-nav__menu-link--active">Juan Marquina</a>
           </li>
         </ul>
@@ -63,7 +63,7 @@
             Somos el mejor lugar donde puedes aprender sobre desarrollo web frontend. Asimismo, con Base 2 by Web 4B
             puedes hacer realidad ese sueño que tienes en mente. ¡Cambia tu vida!
           </p>
-          <a href="https://www.linkedin.com/in/elliotgaramendi/" class="i-hero__info-link">¡Aprender gratis!</a>
+          <a href="https://github.com/Juan090797/proyecto1/tree/develop" class="i-hero__info-link">¡Aprender gratis!</a>
         </div>
         <div class="i-hero__img-container">
           <div class="i-hero__img-pro-tech-container">
@@ -185,7 +185,7 @@
         </ul>
         <h2>
           🦄Copyright &copy; 2022
-          <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer">
+          <a href="https://github.com/Juan090797/proyecto1/tree/develop" target="_blank" rel="noopener noreferrer">
             Base2
           </a>
           Todos los derechos reservados.🦄
