--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./css/index.css" />
 
-  <title>Portafolio Juan Marquina</title>
-  <meta name="title" content="Portafolio Juan Marquina" />
+  <title>Juan Marquina</title>
+  <meta name="title" content="Base 2 By Web 4B" />
   <meta name="description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
 
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://elliotxleo.github.io/tecsup-frontend-o-g17/" />
-  <meta property="og:title" content="Portafolio Juan Marquina" />
+  <meta property="og:title" content="Base 2 By Web 4B" />
   <meta property="og:description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
   <meta property="og:image"
@@ -23,7 +23,7 @@
 
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://elliotxleo.github.io/tecsup-frontend-o-g17/" />
-  <meta property="twitter:title" content="Portafolio Juan Marquina" />
+  <meta property="twitter:title" content="Base 2 By Web 4B" />
   <meta property="twitter:description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
   <meta property="twitter:image"
@@ -38,16 +38,16 @@
           <img src="./assets/img/logo-base-2.webp" alt="Logo Base 2" width="108" height="32"
             class="header-nav__link-logo" />
         </a>
-        <ul class="header-nav__menu-list-container">
+        <ul class="header-nav__menu-list">
           <li>
-            <a href="#iExperience" class="header-nav__menu-link">Experiencias</a>
+            <a href="#iExperience" class="header-nav__menu-link">Experiencia</a>
           </li>
           <li>
             <a href="#iContact" class="header-nav__menu-link">Contacto</a>
           </li>
           <li>
-            <a href="#" target="_blank" rel="noopener noreferrer"
-              class="header-nav__menu-link header-nav__menu-link--active">Juan Marquina</a>
+            <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer"
+              class="header-nav__menu-link header-nav__menu-link--active">Elliot</a>
           </li>
         </ul>
       </div>
@@ -63,7 +63,7 @@
             Somos el mejor lugar donde puedes aprender sobre desarrollo web frontend. Asimismo, con Base 2 by Web 4B
             puedes hacer realidad ese sueño que tienes en mente. ¡Cambia tu vida!
           </p>
-          <a href="https://github.com/Juan090797/proyecto1/tree/develop" class="i-hero__info-link">¡Aprender gratis!</a>
+          <a href="https://www.linkedin.com/in/elliotgaramendi/" class="i-hero__info-link">¡Aprender gratis!</a>
         </div>
         <div class="i-hero__img-container">
           <div class="i-hero__img-pro-tech-container">
@@ -80,11 +80,18 @@
         </div>
       </div>
     </article>
-    <section id="iExperience">
+    <figure class="wave">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 170" class="wave__wave">
+        <path fill-opacity="1"
+          d="M0,68L48,82.2C96,96,192,125,288,127.5C384,130,480,108,576,90.7C672,74,768,62,864,73.7C960,85,1056,119,1152,124.7C1248,130,1344,108,1440,87.8C1536,68,1632,51,1728,42.5C1824,34,1920,34,2016,42.5C2112,51,2208,68,2304,65.2C2400,62,2496,40,2592,36.8C2688,34,2784,51,2880,56.7C2976,62,3072,57,3168,68C3264,79,3360,108,3456,116.2C3552,125,3648,113,3744,104.8C3840,96,3936,91,4032,96.3C4128,102,4224,119,4320,113.3C4416,108,4512,79,4608,73.7C4704,68,4800,85,4896,87.8C4992,91,5088,79,5184,65.2C5280,51,5376,34,5472,36.8C5568,40,5664,62,5760,59.5C5856,57,5952,28,6048,31.2C6144,34,6240,68,6336,87.8C6432,108,6528,113,6624,104.8C6720,96,6816,74,6864,62.3L6912,51L6912,170L6864,170C6816,170,6720,170,6624,170C6528,170,6432,170,6336,170C6240,170,6144,170,6048,170C5952,170,5856,170,5760,170C5664,170,5568,170,5472,170C5376,170,5280,170,5184,170C5088,170,4992,170,4896,170C4800,170,4704,170,4608,170C4512,170,4416,170,4320,170C4224,170,4128,170,4032,170C3936,170,3840,170,3744,170C3648,170,3552,170,3456,170C3360,170,3264,170,3168,170C3072,170,2976,170,2880,170C2784,170,2688,170,2592,170C2496,170,2400,170,2304,170C2208,170,2112,170,2016,170C1920,170,1824,170,1728,170C1632,170,1536,170,1440,170C1344,170,1248,170,1152,170C1056,170,960,170,864,170C768,170,672,170,576,170C480,170,384,170,288,170C192,170,96,170,48,170L0,170Z">
+        </path>
+      </svg>
+    </figure>
+    <section id="iExperience" class="experience">
       <div>
-        <h2>Experiencias</h2>
-        <table class="tabla" border="1" align="center" bordercolor="white" cellspacing="0">
-          <thead class="thead">
+        <h2 class="experience__title">Experiencia</h2>
+        <table>
+          <thead>
             <tr>
               <th>Empresa</th>
               <th>Cargo</th>
@@ -92,45 +99,45 @@
               <th>Periodo</th>
             </tr>
           </thead>
-          <tbody class="tbody">
+          <tbody>
             <tr>
-              <td>Aduanas</td>
-              <td>Analista de sistemas</td>
+              <td>Cineplanet</td>
+              <td>Frontend Developer</td>
               <td>
                 <ul>
-                  <li>Desarrollo de aplicaciones con Java, PHP.</li>
-                  <li>Investigación, optimización y aplicando tecnologías modernas.</li>
+                  <li>Desarrollo de aplicaciones con React y Redux basándome en un Figma y aplicando Scrum.</li>
+                  <li>Investigación, optimización, mantenimiento y presentación aplicando tecnologías modernas.</li>
                 </ul>
               </td>
-              <td>Mayo 2022, presente</td>
+              <td>Julio 2021, presente</td>
             </tr>
             <tr>
-              <td>Sinapsys</td>
-              <td>Encargado de Sistemas</td>
+              <td>Tecsup</td>
+              <td>Docente Frontend</td>
               <td>
                 <ul>
-                  <li>Desarollo y soporte de software de la empresa.</li>
-                  <li>Desarrollo de proyectos para optimizar los procesos de la empresa.</li>
+                  <li>Bootcamp: Desarrollo Frontend: git, Lógica P., HTML, CSS, JS, B, Sass, Node, React, Testing.</li>
+                  <li>Desarrollo de proyectos y materiales para el aprendizaje teórico y práctico de los alumnos.</li>
                 </ul>
               </td>
-              <td>Febrero 2021, Abril 2021</td>
+              <td>septiembre 2021, presente</td>
             </tr>
             <tr>
-              <td>Apm Terminals</td>
-              <td>Soporte N1</td>
+              <td>DRIVEN</td>
+              <td>Frontend Developer</td>
               <td>
                 <ul>
-                  <li>Soporte al personal OnSite.</li>
-                  <li>Brindar soporte a los requerimientos que presenten los colaboradores.</li>
+                  <li>Desarrollo de aplicaciones e-commerce con VTEX IO y React bajo el marco de trabajo Scrum.</li>
+                  <li>Maquetación web de diseños del Figma en React esencialmente con CSS.</li>
                 </ul>
               </td>
-              <td>Agosto 2020, Enero 2021</td>
+              <td>septiembre 2021, presente</td>
             </tr>
           </tbody>
-          <tfoot class="tfoot">
-            <tr align="center">
-              <td colspan="4" height="50">
-                <a class="btn-proyectos" href="https://github.com/Juan090797?tab=repositories">Ver mis proyectos</a>
+          <tfoot>
+            <tr>
+              <td colspan="4">
+                <a href="https://www.linkedin.com/in/elliotgaramendi/">Ver más experiencias</a>
               </td>
             </tr>
           </tfoot>
@@ -185,7 +192,7 @@
         </ul>
         <h2>
           🦄Copyright &copy; 2022
-          <a href="https://github.com/Juan090797/proyecto1/tree/develop" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer">
             Base2
           </a>
           Todos los derechos reservados.🦄
