--- a/index.html
+++ b/index.html
@@ -8,26 +8,30 @@
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./css/index.css" />
 
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
+
   <title>Juan Marquina</title>
-  <meta name="title" content="Base 2 By Web 4B" />
-  <meta name="description"
-    content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
+  <!-- Primary Meta Tags -->
+<title>Meta Tags — Preview, Edit and Generate</title>
+<meta name="title" content="Meta Tags — Preview, Edit and Generate">
+<meta name="description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
 
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://elliotxleo.github.io/tecsup-frontend-o-g17/" />
-  <meta property="og:title" content="Base 2 By Web 4B" />
-  <meta property="og:description"
-    content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
-  <meta property="og:image"
-    content="https://elliotxleo.github.io/tecsup-frontend-o-g17/assets/img/tecsup-frontend-o-g17.png">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="Meta Tags — Preview, Edit and Generate">
+<meta property="og:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://elliotxleo.github.io/tecsup-frontend-o-g17/" />
-  <meta property="twitter:title" content="Base 2 By Web 4B" />
-  <meta property="twitter:description"
-    content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
-  <meta property="twitter:image"
-    content="https://elliotxleo.github.io/tecsup-frontend-o-g17/assets/img/tecsup-frontend-o-g17.png" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="Meta Tags — Preview, Edit and Generate">
+<meta property="twitter:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 </head>
 
 <body class="body">
@@ -57,26 +61,24 @@
     <article class="i-hero" id="iHero">
       <div class="i-hero__container">
         <div class="i-hero__info-container">
-          <h1 class="i-hero__info-title">Portafolio Juan Marquina</h1>
+          <h1 class="i-hero__info-title">Base 2 by Web 4B</h1>
           <h2 class="i-hero__info-subtitle">Los mejores diseños y desarrollos de páginas web en el Perú</h2>
           <p class="i-hero__info-paragraph">
             Somos el mejor lugar donde puedes aprender sobre desarrollo web frontend. Asimismo, con Base 2 by Web 4B
             puedes hacer realidad ese sueño que tienes en mente. ¡Cambia tu vida!
           </p>
-          <a href="https://www.linkedin.com/in/elliotgaramendi/" class="i-hero__info-link">¡Aprender gratis!</a>
+          <a href="https://www.linkedin.com/in/elliotgaramendi/" class="button button--primary">¡Aprender gratis!</a>
         </div>
         <div class="i-hero__img-container">
-          <div class="i-hero__img-pro-tech-container">
-            <img src="./assets/img/user.png" alt="Elliot Garamendi" width="256" height="256"
-              class="i-hero__img-pro" />
-            <figure class="i-hero__img-tech-container">
-              <img src="./assets/svg/logo-html-5.svg" alt="HTML" width="64" height="64" class="i-hero__img-tech" />
-              <img src="./assets/svg/logo-css-3.svg" alt="CSS" width="64" height="64" class="i-hero__img-tech" />
-              <img src="./assets/svg/logo-javascript.svg" alt="JavaScript" width="64" height="64"
-                class="i-hero__img-tech" />
-              <img src="./assets/svg/logo-react.svg" alt="React" width="64" height="64" class="i-hero__img-tech" />
-            </figure>
-          </div>
+          <img src="./assets/img/user.png" alt="Elliot Garamendi" width="256" height="256"
+            class="i-hero__img-pro" />
+          <figure class="i-hero__img-tech-container">
+            <img src="./assets/svg/logo-html-5.svg" alt="HTML" width="64" height="64" class="i-hero__img-tech" />
+            <img src="./assets/svg/logo-css-3.svg" alt="CSS" width="64" height="64" class="i-hero__img-tech" />
+            <img src="./assets/svg/logo-javascript.svg" alt="JavaScript" width="64" height="64"
+              class="i-hero__img-tech" />
+            <img src="./assets/svg/logo-react.svg" alt="React" width="64" height="64" class="i-hero__img-tech" />
+          </figure>
         </div>
       </div>
     </article>
@@ -87,112 +89,104 @@
         </path>
       </svg>
     </figure>
-    <section id="iExperience" class="experience">
-      <div>
-        <h2 class="experience__title">Experiencia</h2>
-        <table>
-          <thead>
-            <tr>
-              <th>Empresa</th>
-              <th>Cargo</th>
-              <th>Funciones</th>
-              <th>Periodo</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Cineplanet</td>
-              <td>Frontend Developer</td>
-              <td>
-                <ul>
-                  <li>Desarrollo de aplicaciones con React y Redux basándome en un Figma y aplicando Scrum.</li>
-                  <li>Investigación, optimización, mantenimiento y presentación aplicando tecnologías modernas.</li>
-                </ul>
-              </td>
-              <td>Julio 2021, presente</td>
-            </tr>
-            <tr>
-              <td>Tecsup</td>
-              <td>Docente Frontend</td>
-              <td>
-                <ul>
-                  <li>Bootcamp: Desarrollo Frontend: git, Lógica P., HTML, CSS, JS, B, Sass, Node, React, Testing.</li>
-                  <li>Desarrollo de proyectos y materiales para el aprendizaje teórico y práctico de los alumnos.</li>
-                </ul>
-              </td>
-              <td>septiembre 2021, presente</td>
-            </tr>
-            <tr>
-              <td>DRIVEN</td>
-              <td>Frontend Developer</td>
-              <td>
-                <ul>
-                  <li>Desarrollo de aplicaciones e-commerce con VTEX IO y React bajo el marco de trabajo Scrum.</li>
-                  <li>Maquetación web de diseños del Figma en React esencialmente con CSS.</li>
-                </ul>
-              </td>
-              <td>septiembre 2021, presente</td>
-            </tr>
-          </tbody>
-          <tfoot>
-            <tr>
-              <td colspan="4">
-                <a href="https://www.linkedin.com/in/elliotgaramendi/">Ver más experiencias</a>
-              </td>
-            </tr>
-          </tfoot>
-        </table>
+    <section id="iExperience" class="section section--secondary">
+      <div class="container container--elements">
+        <h2 class="section__title">👨‍💻 Experiencia 👨‍💻</h2>
+        <div class="section__cards">
+          <div class="card-exp">
+            <h4 class="card-exp__period">Abril 2022, presente</h4>
+            <h3 class="card-exp__company">Aduanas</h3>
+            <h4 class="card-exp__role">Analista Sistemas</h4>
+            <ul class="card-exp__activities">
+              <li class="card-exp__activity">Desarrollo de aplicaciones con React y Redux basándome en un Figma y
+                aplicando Scrum.</li>
+              <li class="card-exp__activity">Investigación, optimización, mantenimiento y presentación aplicando
+                tecnologías modernas.</li>
+            </ul>
+          </div>
+          <div class="card-exp">
+            <h4 class="card-exp__period">septiembre 2021, 2022</h4>
+            <h3 class="card-exp__company">Sinapsys</h3>
+            <h4 class="card-exp__role">Encargado de Sistemas</h4>
+            <ul class="card-exp__activities">
+              <li class="card-exp__activity">Bootcamp: Desarrollo Frontend: git, Lógica P., HTML, CSS, JS, B, Sass,
+                Node, React, Testing.</li>
+              <li class="card-exp__activity">Desarrollo de proyectos y materiales para el aprendizaje teórico y práctico
+                de los alumnos.</li>
+            </ul>
+          </div>
+          <div class="card-exp">
+            <h4 class="card-exp__period">mayo 2021, 2022</h4>
+            <h3 class="card-exp__company">APM Terminals</h3>
+            <h4 class="card-exp__role">Frontend Developer</h4>
+            <ul class="card-exp__activities">
+              <li class="card-exp__activity">Desarrollo de aplicaciones e-commerce con VTEX IO y React bajo el marco de
+                trabajo Scrum.</li>
+              <li class="card-exp__activity">Maquetación web de diseños del Figma en React esencialmente con CSS.</li>
+            </ul>
+          </div>
+        </div>
+        <a href="#" class="button button--primary">Ver más experiencias</a>
       </div>
     </section>
-    <section id="iContact">
-      <div>
-        <h2>Contacto</h2>
-        <form>
-          <input type="text" name="name" placeholder="Nombre" maxlength="255" required />
-          <input type="number" name="phone" placeholder="Celular" min="900000000" max="999999999" required />
-          <button>Enviar</button>
+    <figure class="wave wave--reverse">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 170" class="wave__wave">
+        <path fill-opacity="1"
+          d="M0,68L48,82.2C96,96,192,125,288,127.5C384,130,480,108,576,90.7C672,74,768,62,864,73.7C960,85,1056,119,1152,124.7C1248,130,1344,108,1440,87.8C1536,68,1632,51,1728,42.5C1824,34,1920,34,2016,42.5C2112,51,2208,68,2304,65.2C2400,62,2496,40,2592,36.8C2688,34,2784,51,2880,56.7C2976,62,3072,57,3168,68C3264,79,3360,108,3456,116.2C3552,125,3648,113,3744,104.8C3840,96,3936,91,4032,96.3C4128,102,4224,119,4320,113.3C4416,108,4512,79,4608,73.7C4704,68,4800,85,4896,87.8C4992,91,5088,79,5184,65.2C5280,51,5376,34,5472,36.8C5568,40,5664,62,5760,59.5C5856,57,5952,28,6048,31.2C6144,34,6240,68,6336,87.8C6432,108,6528,113,6624,104.8C6720,96,6816,74,6864,62.3L6912,51L6912,170L6864,170C6816,170,6720,170,6624,170C6528,170,6432,170,6336,170C6240,170,6144,170,6048,170C5952,170,5856,170,5760,170C5664,170,5568,170,5472,170C5376,170,5280,170,5184,170C5088,170,4992,170,4896,170C4800,170,4704,170,4608,170C4512,170,4416,170,4320,170C4224,170,4128,170,4032,170C3936,170,3840,170,3744,170C3648,170,3552,170,3456,170C3360,170,3264,170,3168,170C3072,170,2976,170,2880,170C2784,170,2688,170,2592,170C2496,170,2400,170,2304,170C2208,170,2112,170,2016,170C1920,170,1824,170,1728,170C1632,170,1536,170,1440,170C1344,170,1248,170,1152,170C1056,170,960,170,864,170C768,170,672,170,576,170C480,170,384,170,288,170C192,170,96,170,48,170L0,170Z">
+        </path>
+      </svg>
+    </figure>
+    <section id="iContact" class="section">
+      <div class="container container--elements">
+        <h2 class="section__title">🌌 Contacto 🌌</h2>
+        <form class="form">
+          <input type="text" name="name" placeholder="Nombre" maxlength="255" class="form__input" required />
+          <input type="number" name="phone" placeholder="Celular" min="900000000" max="999999999" class="form__input"
+            required />
+          <button class="button button--primary">Enviar</button>
         </form>
       </div>
     </section>
   </main>
   <footer>
-    <nav>
-      <div>
-        <ul>
+    <nav class="section section--headed">
+      <div class="container container--elements">
+        <ul class="menu">
           <li>
             <a href="https://www.youtube.com/channel/UCE9whBrtYnLWrpzwk6z_JUA">
-              <img src="./assets/svg/logo-youtube.svg" alt="YouTube" width="32" height="32" />
+              <img src="./assets/svg/logo-youtube.svg" alt="YouTube" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
             <a href="https://github.com/ElliotXLeo">
-              <img src="./assets/svg/logo-github.svg" alt="GitHub" width="32" height="32" />
+              <img src="./assets/svg/logo-github.svg" alt="GitHub" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
             <a href="https://www.linkedin.com/in/elliotgaramendi/">
-              <img src="./assets/svg/logo-linkedin.svg" alt="LinkedIn" width="32" height="32" />
+              <img src="./assets/svg/logo-linkedin.svg" alt="LinkedIn" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
             <a href="https://www.instagram.com/elliotgaramendi/">
-              <img src="./assets/svg/logo-instagram.svg" alt="Instagram" width="32" height="32" />
+              <img src="./assets/svg/logo-instagram.svg" alt="Instagram" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
             <a href="https://www.facebook.com/elliotgaramendi">
-              <img src="./assets/svg/logo-facebook.svg" alt="Facebook" width="32" height="32" />
+              <img src="./assets/svg/logo-facebook.svg" alt="Facebook" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
             <a href="https://elliotxleo.github.io/portafolio-web-elgs/">
-              <img src="./assets/svg/logo-internet.svg" alt="Web" width="32" height="32" />
+              <img src="./assets/svg/logo-internet.svg" alt="Web" width="24" height="24" class="menu__img" />
             </a>
           </li>
         </ul>
-        <h2>
+        <h2 class="section__footer-title">
           🦄Copyright &copy; 2022
-          <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer"
+            class="section__footer-link">
             Base2
           </a>
           Todos los derechos reservados.🦄
