--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             <a href="#iContact" class="header-nav__menu-link">Contacto</a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer"
-              class="header-nav__menu-link header-nav__menu-link--active">Elliot</a>
+            <a href="#" target="_blank" rel="noopener noreferrer"
+              class="header-nav__menu-link header-nav__menu-link--active">Juan Marquina</a>
           </li>
         </ul>
       </div>
