--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <h3 class="card-exp__company">Aduanas</h3>
             <h4 class="card-exp__role">Analista Sistemas</h4>
             <ul class="card-exp__activities">
-              <li class="card-exp__activity">Desarrollo de aplicaciones con React y Redux basándome en un Figma y
+              <li class="card-exp__activity">Desarrollo de aplicaciones con Java, PHP y
                 aplicando Scrum.</li>
               <li class="card-exp__activity">Investigación, optimización, mantenimiento y presentación aplicando
                 tecnologías modernas.</li>
@@ -107,10 +107,9 @@
             <h3 class="card-exp__company">Sinapsys</h3>
             <h4 class="card-exp__role">Encargado de Sistemas</h4>
             <ul class="card-exp__activities">
-              <li class="card-exp__activity">Bootcamp: Desarrollo Frontend: git, Lógica P., HTML, CSS, JS, B, Sass,
+              <li class="card-exp__activity">Investigación, optimización, mantenimiento, git, Lógica P., HTML, CSS, JS, B, Sass,
                 Node, React, Testing.</li>
-              <li class="card-exp__activity">Desarrollo de proyectos y materiales para el aprendizaje teórico y práctico
-                de los alumnos.</li>
+              <li class="card-exp__activity">Desarrollo de proyectos y materiales para el aprendizaje teórico y práctico.</li>
             </ul>
           </div>
           <div class="card-exp">
@@ -151,41 +150,41 @@
       <div class="container container--elements">
         <ul class="menu">
           <li>
-            <a href="https://www.youtube.com/channel/UCE9whBrtYnLWrpzwk6z_JUA">
+            <a href="#">
               <img src="./assets/svg/logo-youtube.svg" alt="YouTube" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="https://github.com/ElliotXLeo">
+            <a href="#">
               <img src="./assets/svg/logo-github.svg" alt="GitHub" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/elliotgaramendi/">
+            <a href="#">
               <img src="./assets/svg/logo-linkedin.svg" alt="LinkedIn" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/elliotgaramendi/">
+            <a href="#">
               <img src="./assets/svg/logo-instagram.svg" alt="Instagram" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/elliotgaramendi">
+            <a href="#">
               <img src="./assets/svg/logo-facebook.svg" alt="Facebook" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="https://elliotxleo.github.io/portafolio-web-elgs/">
+            <a href="#">
               <img src="./assets/svg/logo-internet.svg" alt="Web" width="24" height="24" class="menu__img" />
             </a>
           </li>
         </ul>
         <h2 class="section__footer-title">
           🦄Copyright &copy; 2022
-          <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer"
+          <a href="#" target="_blank" rel="noopener noreferrer"
             class="section__footer-link">
-            Base2
+            Juan Marquina
           </a>
           Todos los derechos reservados.🦄
         </h2>
