--- a/index.html
+++ b/index.html
@@ -12,24 +12,28 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
 
-  <title>Juan Marquina</title>
-<meta name="title" content="Meta Tags — Preview, Edit and Generate">
-<meta name="description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+  <title>Base 2 By Web 4B</title>
+  <meta name="title" content="Base 2 By Web 4B" />
+  <meta name="description"
+    content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://metatags.io/">
-<meta property="og:title" content="Meta Tags — Preview, Edit and Generate">
-<meta property="og:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
-<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://elliotxleo.github.io/tecsup-frontend-o-g17/" />
+  <meta property="og:title" content="Base 2 By Web 4B" />
+  <meta property="og:description"
+    content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
+  <meta property="og:image"
+    content="https://elliotxleo.github.io/tecsup-frontend-o-g17/assets/img/tecsup-frontend-o-g17.png">
 
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://metatags.io/">
-<meta property="twitter:title" content="Meta Tags — Preview, Edit and Generate">
-<meta property="twitter:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
-<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://elliotxleo.github.io/tecsup-frontend-o-g17/" />
+  <meta property="twitter:title" content="Base 2 By Web 4B" />
+  <meta property="twitter:description"
+    content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
+  <meta property="twitter:image"
+    content="https://elliotxleo.github.io/tecsup-frontend-o-g17/assets/img/tecsup-frontend-o-g17.png" />
 </head>
 
 <body class="body">
@@ -40,7 +44,9 @@
           <img src="./assets/img/logo-base-2.webp" alt="Logo Base 2" width="108" height="32"
             class="header-nav__link-logo" />
         </a>
-        <ul class="header-nav__menu-list">
+        <label for="menu" class="icon"><i class="bi bi-list"></i></label>
+        <input type="checkbox" id="menu" class="menu-checkbox" />
+        <ul class="header-nav__menu-list menu--hamburger">
           <li>
             <a href="#iExperience" class="header-nav__menu-link">Experiencia</a>
           </li>
@@ -65,7 +71,7 @@
             Somos el mejor lugar donde puedes aprender sobre desarrollo web frontend. Asimismo, con Base 2 by Web 4B
             puedes hacer realidad ese sueño que tienes en mente. ¡Cambia tu vida!
           </p>
-          <a href="https://www.linkedin.com/in/elliotgaramendi/" class="button button--primary">¡Aprender gratis!</a>
+          <a href="#" class="button button--primary">¡Aprender gratis!</a>
         </div>
         <div class="i-hero__img-container">
           <img src="./assets/img/user.png" alt="Elliot Garamendi" width="256" height="256"
@@ -92,34 +98,46 @@
         <h2 class="section__title">👨‍💻 Experiencia 👨‍💻</h2>
         <div class="section__cards">
           <div class="card-exp">
-            <h4 class="card-exp__period">Abril 2022, presente</h4>
-            <h3 class="card-exp__company">Aduanas</h3>
-            <h4 class="card-exp__role">Analista Sistemas</h4>
+            <h4 class="card-exp__period">Julio 2021, presente</h4>
+            <h3 class="card-exp__company">Cineplanet</h3>
+            <h4 class="card-exp__role">Frontend Developer</h4>
             <ul class="card-exp__activities">
-              <li class="card-exp__activity">Desarrollo de aplicaciones con Java, PHP y
+              <li class="card-exp__activity">Desarrollo de aplicaciones con React y Redux basándome en un Figma y
                 aplicando Scrum.</li>
               <li class="card-exp__activity">Investigación, optimización, mantenimiento y presentación aplicando
                 tecnologías modernas.</li>
             </ul>
           </div>
           <div class="card-exp">
-            <h4 class="card-exp__period">septiembre 2021, 2022</h4>
-            <h3 class="card-exp__company">Sinapsys</h3>
-            <h4 class="card-exp__role">Encargado de Sistemas</h4>
+            <h4 class="card-exp__period">septiembre 2021, presente</h4>
+            <h3 class="card-exp__company">Tecsup</h3>
+            <h4 class="card-exp__role">Docente Frontend</h4>
             <ul class="card-exp__activities">
-              <li class="card-exp__activity">Investigación, optimización, mantenimiento, git, Lógica P., HTML, CSS, JS, B, Sass,
+              <li class="card-exp__activity">Bootcamp: Desarrollo Frontend: git, Lógica P., HTML, CSS, JS, B, Sass,
                 Node, React, Testing.</li>
-              <li class="card-exp__activity">Desarrollo de proyectos y materiales para el aprendizaje teórico y práctico.</li>
+              <li class="card-exp__activity">Desarrollo de proyectos y materiales para el aprendizaje teórico y práctico
+                de los alumnos.</li>
             </ul>
           </div>
           <div class="card-exp">
-            <h4 class="card-exp__period">mayo 2021, 2022</h4>
-            <h3 class="card-exp__company">APM Terminals</h3>
+            <h4 class="card-exp__period">septiembre 2021, presente</h4>
+            <h3 class="card-exp__company">DRIVEN</h3>
             <h4 class="card-exp__role">Frontend Developer</h4>
             <ul class="card-exp__activities">
               <li class="card-exp__activity">Desarrollo de aplicaciones e-commerce con VTEX IO y React bajo el marco de
                 trabajo Scrum.</li>
               <li class="card-exp__activity">Maquetación web de diseños del Figma en React esencialmente con CSS.</li>
+            </ul>
+          </div>
+          <div class="card-exp">
+            <h4 class="card-exp__period">junio 2021, enero 2022</h4>
+            <h3 class="card-exp__company">Idat</h3>
+            <h4 class="card-exp__role">Docente</h4>
+            <ul class="card-exp__activities">
+              <li class="card-exp__activity">Curso: Diseño y Desarrollo Web: HTML, CSS, JS, Bootstrap, jQuery, PHP y
+                MySQL.</li>
+              <li class="card-exp__activity">Desarrollo de proyectos y materiales para el aprendizaje teórico y práctico
+                de los alumnos.</li>
             </ul>
           </div>
         </div>
@@ -182,9 +200,9 @@
         </ul>
         <h2 class="section__footer-title">
           🦄Copyright &copy; 2022
-          <a href="#" target="_blank" rel="noopener noreferrer"
+          <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer"
             class="section__footer-link">
-            Juan Marquina
+            Base2
           </a>
           Todos los derechos reservados.🦄
         </h2>
